--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,9 @@ dependencies:
   
   # Share functionality
   share_plus: ^7.2.2
+  
+  # Lottie animations
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -100,9 +103,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
