fixing login issue

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,12 @@ dependencies:
   
   # Lottie animations
   lottie: ^3.1.0
+  
+  # Firebase
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.2
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
